Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_HttpLog__c/SOM_HttpLog__c.object-meta.xml
<CustomObject>
    <label>OMS Http Log</label>
    <nameField>
        <displayFormat>Http Log - {0}</displayFormat>
        <label>SOM_HttpLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OMS Http Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>