Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_HttpLog__c/fields/RequestHeader__c.field-meta.xml
<CustomField>
    <fullName>RequestHeader__c</fullName>
    <label>RequestHeader</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>