Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_HttpLog__c/fields/ResponseBody__c.field-meta.xml
<CustomField>
    <fullName>ResponseBody__c</fullName>
    <label>ResponseBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>