Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_HttpLog__c/fields/ResponseHeader__c.field-meta.xml
<CustomField>
    <fullName>ResponseHeader__c</fullName>
    <label>ResponseHeader</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>