Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_HttpLog__c/fields/StatusCode__c.field-meta.xml
<CustomField>
    <fullName>StatusCode__c</fullName>
    <label>StatusCode</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>