Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_HttpLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Method__c</columns>
    <columns>Endpoint__c</columns>
    <columns>StatusCode__c</columns>
    <columns>RequestHeader__c</columns>
    <columns>RequestBody__c</columns>
    <columns>ResponseBody__c</columns>
    <columns>ResponseHeader__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>